<resources>

    <string name="app_name">CaloriesCounter</string>
    <string name="default_web_client_id">298295942811-anchflotednvh5kqga7voln2eu01mbca.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="passwordConfirm">Підтвердіть пароль</string>
    <string name="signIn">Вхід</string>
    <string name="signUp">Реєстрація</string>
    <string name="empty">Empty</string>
    <string name="selectImage">Оберіть фото</string>
    <string name="editProfile">Оедагувати профіль</string>
    <string name="saveChanges">Зберегти</string>
    <string name="open">Відкрити</string>
    <string name="close">Закрити</string>
    <string name="productName">Назва продукту</string>
    <string name="Calories">Калорії: </string>
    <string name="Protein">Білки: </string>
    <string name="Carbohydrate">Вуглеводи: </string>
    <string name="Fat">Жири: </string>
    <string name="AddProduct">Додати продукт</string>
    <string name="newDish">Нова страва</string>
    <string name="weight">Вага</string>
    <string name="AddDish">Додати страву</string>
    <string name="CaloriesLimit">Ваша норма калорій</string>
    <string name="height">Зріст, см</string>
    <string name="waist">Талія, см</string>
    <string name="hips">Бедра, см</string>
    <string name="chest">Груди, см</string>
    <string name="wrist">Запястя, см</string>
    <string name="calculate">Обрахувати</string>
    <string name="male">Чол</string>
    <string name="female">Жін</string>
    <string name="minimumActivity">Мінімальна</string>
    <string name="lowActivity">Низька</string>
    <string name="mediumActivity">Середня</string>
    <string name="highActivity">Висока</string>
    <string name="veryHighActivity">Дуже висока</string>
    <string name="userActivity">Рівень активності</string>
    <string name="userSex">Стать</string>
    <string name="fatPercentage">Ваш відсоток жиру</string>
    <string name="hip">Бедро, см</string>
    <string name="forearm">Передпліччя, см</string>
    <string name="neck">Шия, см</string>
    <string name="shin">Гомілка, см</string>
    <string name="Cm">см</string>
    <string name="userCalories">Бажана калорійність в день</string>
    <string name="dailyHeader">Меню на сьогодні</string>
    <string name="CaloriesLable">К:</string>
    <string name="proteinLable">Б:</string>

    <string name="alarm_service_label">AlarmLabel:</string>
    <string name="AddWater">Випити</string>
    <string name="Dish">Разом інгредієнти:</string>
    <string name="search">Пошук</string>
    <string name="addFab">+</string>
    <string name="SignOut">Вихід</string>
    <string name="changeProfile">Змінити дані</string>
    <string name="MyVitamins">Мої вітаміни</string>
    <string name="begin">З: </string>
    <string name="end">До: </string>
    <string name="TimeAlarm">Час нагадування:</string>
    <string name="amount">Кількість</string>
    <string name="Name">Назва:</string>
    <string name="MyMenu">Моє меню</string>
    <string name="weightToday">Вага цього дня:</string>
    <string name="kg">кг</string>
    <string name="WaterVolume">Ліміт води в день</string>
    <string name="Surname">Прізвище</string>
    <string name="birthDate">Дата народження</string>
    <string name="phone">Номер телефону</string>
    <string name="date">Дата</string>
    <string name="ml600">600 мл</string>
    <string name="ml500">500 мл</string>
    <string name="ml400">400 мл</string>
    <string name="ml300">300 мл</string>
    <string name="ml200">200 мл</string>
    <string name="ml100">100 мл</string>
    <string name="bmi">Індекс маси тіла</string>
    <string name="timer">Таймер</string>
    <string name="red">Випито 50л води</string>
    <string name="black">Випито 100л води</string>
    <string name="bronze">Випито 150л води</string>
    <string name="silver">Випито 250л води</string>
    <string name="gold">Випито 500л води</string>
    <string name="age">Вік, р</string>


</resources>