<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProgressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageRed"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/red"/>

            <TextView
                android:id="@+id/red"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/red"
                android:textColor="@color/Indigo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBlack"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/black"/>

            <TextView
                android:id="@+id/black"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/black"
                android:textColor="@color/Indigo" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBronze"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/bronze"/>

            <TextView
                android:id="@+id/bronze"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bronze"
                android:textColor="@color/Indigo" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageSilver"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/silver"/>

        <TextView
            android:id="@+id/silver"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/silver"
            android:textColor="@color/Indigo" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageGold"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/golden2"/>

        <TextView
            android:id="@+id/gold"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gold"
            android:textColor="@color/Indigo" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>