<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:caloriescounter="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".WaterActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/ic_previous"
                    android:onClick="onClickPreviousDate" />

                <TextView
                    android:id="@+id/dateNow"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/date"
                    android:textColor="@color/Indigo" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_next"
                    android:gravity="start"
                    android:onClick="onClickNextDate"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/DarkGrey" />

            <TextView
                android:id="@+id/tvTime"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/TimeAlarm"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSetBegin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/ic_time"
                    android:gravity="center_vertical"
                    android:onClick="onClickSetBegin" />

                <TextView
                    android:id="@+id/lblTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    style="@android:style/TextAppearance.Medium"
                    android:text=" - "
                    android:textColor="@color/SaddleBrown"
                     />

                <Button
                    android:id="@+id/btnSetEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/ic_time"
                    android:onClick="onClickSetEnd" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/DarkGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblWaterVolume"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/WaterVolume"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userWaterVolumeLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    caloriescounter:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUserWaterVolume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:imeOptions="actionDone"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSetVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_done"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAdd100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/ml100" />

                <Button
                    android:id="@+id/btnAdd200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/ml200" />

                <Button
                    android:id="@+id/btnAdd300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/ml300" />

                <Button
                    android:id="@+id/btnAdd400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/ml400" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAdd500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/ml500" />

                <Button
                    android:id="@+id/btnAdd600"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/ml600" />

                <Button
                    android:id="@+id/btnTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/glass"
                    android:text="@string/timer"
                    android:onClick="OnClickTimer"/>
            </LinearLayout>

            <com.example.caloriescounter.elements.CircularProgressBar
                android:id="@+id/countup_bar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="22dp"
                android:textColor="#780000"
                android:textSize="30sp"
                caloriescounter:bgColor="#33FFFFFF"
                caloriescounter:bgStrokeWidth="2dp"
                caloriescounter:diameter="200dp"
                caloriescounter:max="30"
                caloriescounter:progressColor="#780000"
                caloriescounter:progressStrokeWidth="6dp"
                caloriescounter:showText="true" />
        </LinearLayout>
    </ScrollView>
</ScrollView>